Fixed the bug with overflow-x

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap');
-html {
-    overflow-x: hidden;
-}
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -467,8 +464,14 @@ header {
     .reviews-wrap {
         padding: 90px 0 20px;
         position: relative;
+        @include _767px() {
+            padding: 60px 0 20px;
+        }
         .slick-slider {
             margin: 0 -15px;
+            @include _767px() {
+                margin: 0;
+            }
         }
         .reviews-slider {
             .reviews-slide {
@@ -479,7 +482,7 @@ header {
                 margin: 30px 15px;
                 @include _767px() {
                     padding: 20px;
-                    margin: 0 10px 30px;
+                    margin: 30px 0px 20px;
                 }
                 .reviews-head {
                     display: flex;
@@ -527,7 +530,7 @@ header {
             top: 30px;
             right: 20px;
             @include _767px() {
-                right: 7px;
+                right: 20px;
             }
             svg {
                 width: 30px;
